added missing citations to bibliography

--- a/bibliography/references.bib
+++ b/bibliography/references.bib
@@ -642,3 +642,18 @@
   title = {{Reliability of brain volumes from multicenter {MRI} acquisition: A calibration study}},
   journal = {Human Brain Mapping},
 }
+
+
+@article{Brunton_2013,
+  doi = {10.1016/j.jalz.2013.05.1154},
+  url = {http://dx.doi.org/10.1016/j.jalz.2013.05.1154},
+  year = {2013},
+  month = {jul},
+  publisher = {Elsevier {BV}},
+  volume = {9},
+  number = {4},
+  pages = {P581},
+  author = {Simon Brunton and Cerisse Gunasinghe and Nigel Jones and Matthew Kempton and Eric Westman and Andrew Simmons},
+  title = {{A voxel-based morphometry comparison of the 3.0T {ADNI}-1 and {ADNI}-2 {MPRAGE} protocols}},
+  journal = {Alzheimer{\textquotesingle}s {\&} Dementia},
+}
