--- a/begin_table_centering_begin_tabular__1.tex
+++ b/begin_table_centering_begin_tabular__1.tex
@@ -3,7 +3,7 @@
 \centering
 \begin{tabular}{llllll}
 \toprule
-{} & ams-ge-discovery-fspgr &          osl-ge-signa-fspgr & 7 & 8 & 9 \\
+{} & 5 &          6 & 7 & 8 & 9 \\
 \midrule
 TR                    &                   8.21 &                        7.80 &                     9 &               8.21 &                 6.99 \\
 TE                    &                   3.22 &                        2.90 &                  4.00 &               3.81 &                 3.16 \\
@@ -11,15 +11,15 @@ Strength              &                      3 &                           3 &  
 TI                    &                    450 &                         450 &                  1000 &            1016.30 &                  900 \\
 Flip Angle            &                     12 &                          12 &                     8 &                  8 &                    9 \\
 Make                  &                     GE &                          GE &                    Ph &                 Ph &                   Ph \\
-Voxel Size            &                  1x1x1 &                     1x1x1.2 &                 1x1x1 &              1x1x1 &                1x1x1 \\
+Voxel Size            &                  .94x.94x1 &                     1x1x1.2 &                 1x1x1 &              1x1x1 &                1x1x1 \\
 Distortion Correction &                      N &                           Y &                     Y &                  Y &                    Y \\
 Parallel Imaging      &                      2 &                           2 &                     3 &                  2 &                    - \\
-FOV                   &                      0 &                 256x256x166 &           240x240x170 &        240x240x160 &          256x256x204 \\
+FOV                   &                      240x240x172 &                 256x256x166 &           240x240x170 &        240x240x160 &          256x256x204 \\
 Read Out Direction    &                      HF &                          FH &                    AP &                 FH &                   FH \\
 Head coil \# channels  &                      8 &                           8 &                    16 &                 32 &                    8 \\
 Model                 &              MR750 &                  Signa HDxt &               Achieva &         Achieva TX &               Intera \\
 OS                    &                      DV24 &            HD23.0\_V01\_1210a &               3.2.3.2 &              5.1.7 &                3.2.3 \\
-Acq. Time (min)       &               5:02 &  0 &              05:55 &           05:38 &             08:30:00 \\
+Acq. Time (min)       &               5:02 &  7:11 &              05:55 &           05:38 &             08:30:00 \\
 orientation           &               sag &                         sag &                   sag &                sag &                  sag \\
 Amyg (L)              &                   .67 &                        .89 &                  .66 &               .85 &                 0.97 \\
 Amyg (R)              &                   .88 &                        .79 &                  .91 &               .94 &                 0.94 \\
