--- a/Our_derivation_of_po.tex
+++ b/Our_derivation_of_po.tex
@@ -4,4 +4,4 @@ We have validated our scaling factors by demonstrating that a leave-one-out cali
 
 Table \ref{comparetojov} shows comparisons of our within-site ICC to the average within-site ICCs reported by \cite{jovicich2013brain}, where scanners were not strictly standardized and the same freesurfer cross-sectional algorithm was run. All within site ICC's, before and after scaling factor calibration, fall within the range described by \cite{jovicich2013brain}, including the thalamus.  Our last attempt to validate our scaling factor estimates and model was to simulate multisite data using scaling factor estimates and their residual error from the estimate. We found that the power curves align closely, and match when power is at least 80\%. We believe that the small deviations from the theoretical model is a result of the scaling factor estimation error and a relatively small sampling of scaling factors which led to a distribution of 20 scaling factors was not normal.  
 
-The data acquisition of our study is similar to that of \cite{Schnack_2004}, where the researchers acquired T1-weighted images from 8 multicenter human phantoms across 5 sites with non-standardized protocols. These scanners were all 1.5T except for one 1T scanner. \cite{Schnack_2004} calibrated the intensity histograms of the images before segmentation with a calibration factor that was estimated based on the absolute agreement of volumes to the reference site (ICC). After calibration, the ICC's of the lateral ventricle was $\geq 0.96$ compared to our pre- and post- calibrated result of $0.97$. The ICC for the intensity calibrated gray matter volume in \cite{Schnack_2004} was $\geq 0.84$, compared to our calibrated between-site ICC of $0.78$ (uncalibrated), and $0.96$ (calibrated). The ICC for the intensity calibrated  white matter volume in \cite{Schnack_2004} was $\geq .78$ whereas our between-site ICCs were $0.96$ and $0.98$ for the pre- and post- calibrated volumes respectively. Because MS is a white matter disease, all the sites in our consortium study chose scan parameters to maximize the contrast of white matter and the reliability of the volume estimates, which could be why our WMV between-site ICC is much higher than that of \cite{Schnack_2004} and \cite{cannon2014}. Most importantly, the calibration method of \cite{Schnack_2004} requires the acquisition of multisite phantoms, while the results of our direct-volume calibration (the estimates of $CV_a$ for each ROI) allows studies to collect sample sizes based on our  porposed power equation. 
+The data acquisition of our study is similar to that of \cite{Schnack_2004}, where the researchers acquired T1-weighted images from 8 multicenter human phantoms across 5 sites with non-standardized protocols. These scanners were all 1.5T except for one 1T scanner. \cite{Schnack_2004} calibrated the intensity histograms of the images before segmentation with a calibration factor that was estimated based on the absolute agreement of volumes to the reference site (ICC). After calibration, the ICC's of the lateral ventricle was $\geq 0.96$ compared to our pre- and post- calibrated result of $0.97$. The ICC for the intensity calibrated gray matter volume in \cite{Schnack_2004} was $\geq 0.84$, compared to our calibrated between-site ICC of $0.78$ (uncalibrated), and $0.96$ (calibrated). The ICC for the intensity calibrated  white matter volume in \cite{Schnack_2004} was $\geq .78$ whereas our between-site ICCs were $0.96$ and $0.98$ for the pre- and post- calibrated volumes respectively. Because MS is a white matter disease, all the sites in our consortium study chose scan parameters to maximize the contrast of white matter and the reliability of the volume estimates, which could be why our WMV between-site ICC is much higher than that of \cite{Schnack_2004} and \cite{cannon2014}. Most importantly, the calibration method of \cite{Schnack_2004} requires the acquisition of multisite phantoms, while the results of our direct-volume calibration (the estimates of $CV_a$ for each ROI) allows studies to collect sample sizes based on our  proposed power equation. 
