--- a/authors.tex
+++ b/authors.tex
@@ -115,8 +115,8 @@ Roland G. Henry\footnote[1,2,11]{Department of Neurology, University California,
 \author[1]{Jorge R. Oksenberg}
 \author[1,2,11]{Roland G. Henry}
 
-\affil[1]{Department of Neurology, University California, San Francisco,  USA}
-\affil[2]{UC Berkeley - UCSF Graduate Program in Bioengineering, San Francisco, USA}
+\address[1]{Department of Neurology, University California, San Francisco,  USA}
+\address[2]{UC Berkeley - UCSF Graduate Program in Bioengineering, San Francisco, USA}
 \affil[3]{NeuroCure Clinical Research Center and Clinical and Experimental Multiple Sclerosis Research Center, Department of Neurology, Charité University Medicine Berlin, Berlin, Germany.}
 \affil[4]{Department of Radiology and Nuclear Medicine, Oslo University Hospital, Oslo, Norway}
 \affil[5]{Department of Biostatistics and Epidemiology, Center for Clinical Epidemiology and Biostatistics, Perelman School of Medicine, University of Pennsylvania, Philadelphia, USA}
