--- a/authors.tex
+++ b/authors.tex
@@ -117,34 +117,34 @@ Roland G. Henry\footnote[1,2,11]{Department of Neurology, University California,
 
 \address[1]{Department of Neurology, University California, San Francisco,  USA}
 \address[2]{UC Berkeley - UCSF Graduate Program in Bioengineering, San Francisco, USA}
-\affil[3]{NeuroCure Clinical Research Center and Clinical and Experimental Multiple Sclerosis Research Center, Department of Neurology, Charité University Medicine Berlin, Berlin, Germany.}
-\affil[4]{Department of Radiology and Nuclear Medicine, Oslo University Hospital, Oslo, Norway}
-\affil[5]{Department of Biostatistics and Epidemiology, Center for Clinical Epidemiology and Biostatistics, Perelman School of Medicine, University of Pennsylvania, Philadelphia, USA}
-\affil[6]{Department of Neurology, Basel University Hospital, Basel, Switzerland}
-\affil[7]{Brigham and Women's Hospital, MA, United States}
-\affil[8]{Clinical Immunology, University Hospital Basel, Switzerland}
-\affil[9]{Department of Translational Medicine, Department of Radiology,  UPO University, Via Solaroli 17, 28100, Novara, Italy}
-\affil[10]{Vall d’Hebron Hospital Barcelona, Barcelona, Spain}
-\affil[11]{Department of Radiology and Biomedical Imaging, University California, San Francisco, CA, USA}
-\affil[12]{Department of Health Sciences, UPO University, Novara, Italy}
-\affil[13]{Department of Radiology, University Hospitals Leuven, Leuven, Belgium}
-\affil[14]{ KU Leuven – University of Leuven, Department of Neurosciences, Leuven, Belgium}
-\affil[15]{Neuroimaging Research Unit, Institute of Experimental Neurology, Division of Neuroscience, San Raffaele Scientific Institute, Vita-Salute San Raffaele University}
-\affil[16]{Department of Neurology, Focus Program Translational Neuroscience (FTN) and Immunotherapy (FZI), Rhine-Main Neuroscience Network (rmn2), University Medical Centre of the Johannes Gutenberg University Mainz, Germany}
-\affil[17]{Hôpital Pitié-Salpêtrière, ICM, UPMC 06 UM 75, INSERM U 1127, CNRS UMR 7225, ICM-A-IHU, AP-HP: Pôle des maladies du système nerveux, 47 boulevard de l'Hôpital, 75013, Paris, France}
-\affil[18]{Medical Image Analysis Center (MIAC AG), Basel, Switzerland.}
-\affil[19]{Departments of Neurology and Immunobiology, Yale School of Medicine, CT, USA}
-\affil[20]{Department of Neurology, Oslo University Hospital and University of Oslo, Oslo, Norway}
-\affil[21]{Dept. Neurology of the  Klinikum rechts der Isar, Technische Universität München, Munich, Germany}
-\affil[22]{Munich Cluster of Systems Neurology (SyNery)}
-\affil[23]{Hospital Clinic Barcelona, IDIBAPS, Barcelona, Spain}
-\affil[24]{John P. Hussman Institute for Human Genomics and the Dr. John T. Macdonald Foundation Department of Human Genetics, University of Miami, Miami, USA}
-\affil[25]{TUM–Neuroimaging Center, Technische Universität München, Germany}
-\affil[26]{DKD Helios Klinik Wiesbaden, Wiesbaden, Germany}
-\affil[27]{Section of Neuroradiology, Department of Radiology, Maggiore Hospital, Novara, Italy, Corso Mazzini 18, 28100}
-\affil[28]{MS Center Amsterdam, VU University Medical Center Amsterdam,The Netherlands}
-\affil[29]{Medical Image Analysis Center Basel, Switzerland}
-\affil[30]{Dept. Neuroradiology, Klinikum rechts der Isar, Technische Universität München, Munich, Germany}
-\affil[31]{International Multiple Sclerosis Genetics Consortium}
+\address[3]{NeuroCure Clinical Research Center and Clinical and Experimental Multiple Sclerosis Research Center, Department of Neurology, Charité University Medicine Berlin, Berlin, Germany.}
+\address[4]{Department of Radiology and Nuclear Medicine, Oslo University Hospital, Oslo, Norway}
+\address[5]{Department of Biostatistics and Epidemiology, Center for Clinical Epidemiology and Biostatistics, Perelman School of Medicine, University of Pennsylvania, Philadelphia, USA}
+\address[6]{Department of Neurology, Basel University Hospital, Basel, Switzerland}
+\address[7]{Brigham and Women's Hospital, MA, United States}
+\address[8]{Clinical Immunology, University Hospital Basel, Switzerland}
+\address[9]{Department of Translational Medicine, Department of Radiology,  UPO University, Via Solaroli 17, 28100, Novara, Italy}
+\address[10]{Vall d’Hebron Hospital Barcelona, Barcelona, Spain}
+\address[11]{Department of Radiology and Biomedical Imaging, University California, San Francisco, CA, USA}
+\address[12]{Department of Health Sciences, UPO University, Novara, Italy}
+\address[13]{Department of Radiology, University Hospitals Leuven, Leuven, Belgium}
+\address[14]{ KU Leuven – University of Leuven, Department of Neurosciences, Leuven, Belgium}
+\address[15]{Neuroimaging Research Unit, Institute of Experimental Neurology, Division of Neuroscience, San Raffaele Scientific Institute, Vita-Salute San Raffaele University}
+\address[16]{Department of Neurology, Focus Program Translational Neuroscience (FTN) and Immunotherapy (FZI), Rhine-Main Neuroscience Network (rmn2), University Medical Centre of the Johannes Gutenberg University Mainz, Germany}
+\address[17]{Hôpital Pitié-Salpêtrière, ICM, UPMC 06 UM 75, INSERM U 1127, CNRS UMR 7225, ICM-A-IHU, AP-HP: Pôle des maladies du système nerveux, 47 boulevard de l'Hôpital, 75013, Paris, France}
+\address[18]{Medical Image Analysis Center (MIAC AG), Basel, Switzerland.}
+\address[19]{Departments of Neurology and Immunobiology, Yale School of Medicine, CT, USA}
+\address[20]{Department of Neurology, Oslo University Hospital and University of Oslo, Oslo, Norway}
+\address[21]{Dept. Neurology of the  Klinikum rechts der Isar, Technische Universität München, Munich, Germany}
+\address[22]{Munich Cluster of Systems Neurology (SyNery)}
+\address[23]{Hospital Clinic Barcelona, IDIBAPS, Barcelona, Spain}
+\address[24]{John P. Hussman Institute for Human Genomics and the Dr. John T. Macdonald Foundation Department of Human Genetics, University of Miami, Miami, USA}
+\address[25]{TUM–Neuroimaging Center, Technische Universität München, Germany}
+\address[26]{DKD Helios Klinik Wiesbaden, Wiesbaden, Germany}
+\address[27]{Section of Neuroradiology, Department of Radiology, Maggiore Hospital, Novara, Italy, Corso Mazzini 18, 28100}
+\address[28]{MS Center Amsterdam, VU University Medical Center Amsterdam,The Netherlands}
+\address[29]{Medical Image Analysis Center Basel, Switzerland}
+\address[30]{Dept. Neuroradiology, Klinikum rechts der Isar, Technische Universität München, Munich, Germany}
+\address[31]{International Multiple Sclerosis Genetics Consortium}
 
 \fi
