--- a/authors.tex
+++ b/authors.tex
@@ -58,16 +58,16 @@ Roland G. Henry\footnote[1,2,11]{Department of Neurology, University California,
 
 \else % PDF export commands go here
 
-\author[1,2]{Anisha Keshavan}
+\author[l1,l2]{Anisha Keshavan}
 \author[3]{Friedemann Paul}
 \author[4]{Mona K. Beyer}
-\author[1]{Alyssa H. Zhu}
-\author[1]{Nico Papinutto}
+\author[l1]{Alyssa H. Zhu}
+\author[l1]{Nico Papinutto}
 \author[5]{Russell T. Shinohara}
-\author[1]{William Stern}
+\author[l1]{William Stern}
 \author[6]{Michael Amann}
 \author[7]{Rohit Bakshi}
-\author[1,6,8]{Antje Bischof}
+\author[l1,6,8]{Antje Bischof}
 \author[9]{Alessandro Carriero}
 \author[10]{Manuel Comabella}
 \author[11]{Jason C. Crane}
@@ -84,7 +84,7 @@ Roland G. Henry\footnote[1,2,11]{Department of Neurology, University California,
 \author[19]{David A. Hafler}
 \author[20]{Hanne F. Harbo}
 \author[21,22]{Bernhard Hemmer}
-\author[1,2]{Kesshi Jordan}
+\author[l1,l2]{Kesshi Jordan}
 \author[6]{Ludwig Kappos}
 \author[11]{Gina Kirkish}
 \author[23]{Sara Llufriu}
@@ -99,7 +99,7 @@ Roland G. Henry\footnote[1,2,11]{Department of Neurology, University California,
 \author[17]{Isabelle Rebeix}
 \author[15]{Maria Rocca}
 \author[10]{Alex Rovira}
-\author[1,6,8]{Regina Schlaeger}
+\author[l1,6,8]{Regina Schlaeger}
 \author[23]{Albert Saiz}
 \author[6,26]{Till Sprenger}
 \author[27]{Alessandro Stecco}
@@ -111,12 +111,12 @@ Roland G. Henry\footnote[1,2,11]{Department of Neurology, University California,
 \author[30]{Claus Zimmer}
 \author[16]{Frauke Zipp}
 \author[31]{International Multiple Sclerosis Genetics Consortium}
-\author[1]{Stephen Hauser}
-\author[1]{Jorge R. Oksenberg}
-\author[1,2,11]{Roland G. Henry}
+\author[l1]{Stephen Hauser}
+\author[l1]{Jorge R. Oksenberg}
+\author[l1,l2,11]{Roland G. Henry}
 
-\address[1]{Department of Neurology, University California, San Francisco,  USA}
-\address[2]{UC Berkeley - UCSF Graduate Program in Bioengineering, San Francisco, USA}
+\address[l1]{Department of Neurology, University California, San Francisco,  USA}
+\address[l2]{UC Berkeley - UCSF Graduate Program in Bioengineering, San Francisco, USA}
 \address[3]{NeuroCure Clinical Research Center and Clinical and Experimental Multiple Sclerosis Research Center, Department of Neurology, Charité University Medicine Berlin, Berlin, Germany.}
 \address[4]{Department of Radiology and Nuclear Medicine, Oslo University Hospital, Oslo, Norway}
 \address[5]{Department of Biostatistics and Epidemiology, Center for Clinical Epidemiology and Biostatistics, Perelman School of Medicine, University of Pennsylvania, Philadelphia, USA}
