--- a/authors.tex
+++ b/authors.tex
@@ -21,6 +21,7 @@ Bertrand Fontaine\footnote[17]{Hôpital Pitié-Salpêtrière, ICM, UPMC 06 UM 75
 Laura Gaetano\footnote[6,18]{Department of Neurology, Basel University Hospital, Basel, Switzerland,Medical Image Analysis Center (MIAC AG), Basel, Switzerland.}
 An Goris\footnote[14]{ KU Leuven – University of Leuven, Department of Neurosciences, Leuven, Belgium}
 Christiane Graetz\footnote[16]{Department of Neurology, Focus Program Translational Neuroscience (FTN) and Immunotherapy (FZI), Rhine-Main Neuroscience Network (rmn2), University Medical Centre of the Johannes Gutenberg University Mainz, Germany}
+Adriane Gröger\footnote[16]{Department of Neurology, Focus Program Translational Neuroscience (FTN) and Immunotherapy (FZI), Rhine-Main Neuroscience Network (rmn2), University Medical Centre of the Johannes Gutenberg University Mainz, Germany}
 Sergiu Groppa\footnote[16]{Department of Neurology, Focus Program Translational Neuroscience (FTN) and Immunotherapy (FZI), Rhine-Main Neuroscience Network (rmn2), University Medical Centre of the Johannes Gutenberg University Mainz, Germany}
 David A. Hafler\footnote[19]{Departments of Neurology and Immunobiology, Yale School of Medicine, CT, USA}
 Hanne F. Harbo\footnote[20]{Department of Neurology, Oslo University Hospital and University of Oslo, Oslo, Norway}
@@ -80,6 +81,7 @@ Roland G. Henry\footnote[1,2,11]{Department of Neurology, University California,
 \author[6,18]{Laura Gaetano}
 \author[14]{An Goris}
 \author[16]{Christiane Graetz}
+\author[16]{Adriane Gröger}
 \author[16]{Sergiu Groppa}
 \author[19]{David A. Hafler}
 \author[20]{Hanne F. Harbo}
