added missing citations to bibliography

--- a/bibliography/references.bib
+++ b/bibliography/references.bib
@@ -669,3 +669,18 @@
   title = {{Partial Volume Estimation in Brain {MRI} Revisited}},
   booktitle = {Medical Image Computing and Computer-Assisted Intervention {\textendash} {MICCAI} 2014},
 }
+
+
+@article{Whitwell_2012,
+  doi = {10.1001/archneurol.2011.3029},
+  url = {http://dx.doi.org/10.1001/archneurol.2011.3029},
+  year = {2012},
+  month = {may},
+  publisher = {American Medical Association ({AMA})},
+  volume = {69},
+  number = {5},
+  pages = {614},
+  author = {Jennifer L. Whitwell},
+  title = {{Comparison of Imaging Biomarkers in the Alzheimer Disease Neuroimaging Initiative and the Mayo Clinic Study of Aging}},
+  journal = {Arch Neurol},
+}
