--- a/We_hypothesized_that.tex
+++ b/We_hypothesized_that.tex
@@ -1,1 +1,1 @@
-We hypothesized that all differences in regional contrast and geometric distortion result in regional volumes that are consistently and linearly scaled from their true value. For a given region of interest (ROI), two mechanisms impact the final boundary definition: gradient nonlinearities cause distortion and, simultaneously, hardware  (including scanner, field strength, and coils) and acquisition parameters modulate tissue contrast, adjusting the whole boundary. Previously, Tardiff and colleagues have found that contrast-to-noise ratio and contrast inhomogeneity from various pulse sequences and scanner strengths cause regional biases in VBM\cite{tardif2010regional, tardif2009sensitivity}, therefore we hypothesized that each ROI will scale differently at each site. Evidence for this scaling property can also be seen in the overall increase of gray matter volume and decrease of WMV of the ADNI-2 compared to the ADNI-1 protocols, despite attempts to maintain compatibility of the updated sequences of ADNI-2 with those of ADNI-1 \cite{Brunton_2013}. By imaging 12 subjects in 20 different scanners using varying acquisition schemes, we were able to estimate the scaling factor for each regional volume at each site. We also defined a framework for calculating the power of a multisite study as a function of the scaling factor variability between sites. This enables us to power a cross-sectional study, and to outline the conditions under which calibration could be avoided by sample size optimization. This framework can also indicate which regional volumes are sufficiently reliable to investigate using a multisite approach.
+We hypothesized that all differences in regional contrast and geometric distortion result in regional volumes that are consistently and linearly scaled from their true value. For a given region of interest (ROI), two mechanisms impact the final boundary definition: gradient nonlinearities cause distortion and, simultaneously, hardware  (including scanner, field strength, and coils) and acquisition parameters modulate tissue contrast, adjusting the whole boundary. Previously, Tardiff and colleagues have found that contrast-to-noise ratio and contrast inhomogeneity from various pulse sequences and scanner strengths cause regional biases in VBM\cite{tardif2010regional, tardif2009sensitivity}, therefore we hypothesized that each ROI will scale differently at each site. Evidence for this scaling property can also be seen in the overall increase of gray matter volume and decrease of WMV of the ADNI-2 compared to the ADNI-1 protocols, despite attempts to maintain compatibility of the updated sequences of ADNI-2 with those of ADNI-1 \cite{Brunton_2013}. By imaging 12 subjects in 20 different scanners using varying acquisition schemes, we were able to estimate the scaling factor for each regional volume at each site. We also defined a framework for calculating the power of a multisite study as a function of the scaling factor variability between sites. This enables us to power a cross-sectional study, and to outline the conditions under which harmonization could be avoided by sample size optimization. This framework can also indicate which regional volumes are sufficiently reliable to investigate using a multisite approach.
