--- a/Figure_reffigpower_s.tex
+++ b/Figure_reffigpower_s.tex
@@ -1,3 +1,3 @@
 Figure \ref{fig:power} shows power curves for small to medium effect sizes ($\delta = 0.2, 0.3$, defined in \cite{Raudenbush2000}), and a false positive rate of $\alpha = 0.002$, which allows for 25 comparisons under Bonferroni correction, where the corrected $\alpha = 0.05$. Power increases for larger $\lambda$  and maximizes at $\lambda = \frac{Jn\delta^2}{4}$ as $CV_a$ approaches 0. In this case, the power equation is dominated by the total number of subjects, as is the case for the GLM. However, even as the number of subjects per site, $n$, approaches infinity and for non-negligible $CV_a$, $\lambda$ is still bounded by $\frac{J}{CV_a^2}$. At this extreme, the  power equation is largely influenced by the number of sites. This highlights the importance of the site-level sample size ($J$) in addition to the subject-level sample size ($n$) for power analyses, especially when there is larger variability between sites for metrics of interest. In the methods section, the acquisition protocols and the standard processing pipelines that were used to calculate $CV_a$ values of relevant regional brain volumes for MS are described, though this framework could be applied to any MRI derived metric.
 
-We emphasize that the use of phantom subjects do not directly contribute to the power equation in Figure 1, as it does not account for any sort of calibration or scaling. However, it requires an estimate for $CV_a$, which is the variability of scaling biases between sites. The goal of this study is to provide researchers with estimates of $CV_a$ from our set of calibration phantoms and our set of non-standardized MRI acquisitions. For a standardized set of scanners, these values may be considered an upper bound. 
+We emphasize that the use of phantom subjects does not directly contribute to the power equation in Figure 1, as it does not account for any sort of calibration or scaling. However, it requires an estimate for $CV_a$, which is the variability of scaling biases between sites. The goal of this study is to provide researchers with estimates of $CV_a$ from our set of calibration phantoms and our set of non-standardized MRI acquisitions. For a standardized set of scanners, the values of $CV_a$ may be considered an upper bound. 
