--- a/Between_and_withinsi.tex
+++ b/Between_and_withinsi.tex
@@ -1,1 +1,1 @@
-Between- and within-site ICC's are plotted with the calibrated ICC's in Figure \ref{fig:calib}. The between-site ICC's of the 46 ROIs improved, with the exception of the right lateral ventricle, which did not change after calibration, and the fifth ventricle, which  had very low scan-rescan reliability, and is shown in the supplemental materials. The within-site ICC's of the thalamus, hippocampus, and amygdala decreased slightly after calibration. Both calibrated and uncalibrated within-site ICC's were greater than 90\% for the MS related ROIs listed in this paper. For the full set of within- and between- site ICC's of the Freesurfer regions, see the Supplemental Materials.
+Between- and within-site ICC's are plotted with the calibrated ICC's in Figure \ref{fig:calib}. The between-site ICC's of the 46 ROIs improved, with the exception of the right lateral ventricle, which did not change after calibration, and the fifth ventricle, which  had very low scan-rescan reliability, and is shown in the supplemental materials. The within-site ICC's of the thalamus, hippocampus, and amygdala decreased slightly after calibration. Both calibrated and uncalibrated within-site ICC's were greater than 90\% for the MS related ROIs listed in this paper. For the full set of within- and between- site ICC's of the Freesurfer aseg regions, see the Supplemental Materials.
