added missing citations to bibliography

--- a/bibliography/references.bib
+++ b/bibliography/references.bib
@@ -684,3 +684,18 @@
   title = {{Comparison of Imaging Biomarkers in the Alzheimer Disease Neuroimaging Initiative and the Mayo Clinic Study of Aging}},
   journal = {Arch Neurol},
 }
+
+
+@article{Wolz_2014,
+  doi = {10.1016/j.jalz.2013.09.014},
+  url = {http://dx.doi.org/10.1016/j.jalz.2013.09.014},
+  year = {2014},
+  month = {jul},
+  publisher = {Elsevier {BV}},
+  volume = {10},
+  number = {4},
+  pages = {430--438.e2},
+  author = {Robin Wolz and Adam J. Schwarz and Peng Yu and Patricia E. Cole and Daniel Rueckert and Clifford R. Jack and David Raunig and Derek Hill},
+  title = {{Robustness of automated hippocampal volumetry across magnetic resonance field strengths and repeat images}},
+  journal = {Alzheimer{\textquotesingle}s {\&} Dementia},
+}
