added missing citations to bibliography

--- a/bibliography/references.bib
+++ b/bibliography/references.bib
@@ -699,3 +699,18 @@
   title = {{Robustness of automated hippocampal volumetry across magnetic resonance field strengths and repeat images}},
   journal = {Alzheimer{\textquotesingle}s {\&} Dementia},
 }
+
+
+@article{Wolz_2010,
+  doi = {10.1016/j.neuroimage.2009.09.069},
+  url = {http://dx.doi.org/10.1016/j.neuroimage.2009.09.069},
+  year = {2010},
+  month = {jan},
+  publisher = {Elsevier {BV}},
+  volume = {49},
+  number = {2},
+  pages = {1316--1325},
+  author = {Robin Wolz and Paul Aljabar and Joseph V. Hajnal and Alexander Hammers and Daniel Rueckert},
+  title = {{{LEAP}: Learning embeddings for atlas propagation}},
+  journal = {{NeuroImage}},
+}
