added missing citations to bibliography

--- a/bibliography/references.bib
+++ b/bibliography/references.bib
@@ -714,3 +714,18 @@
   title = {{{LEAP}: Learning embeddings for atlas propagation}},
   journal = {{NeuroImage}},
 }
+
+
+@article{Jovicich_2009,
+  doi = {10.1016/j.neuroimage.2009.02.010},
+  url = {http://dx.doi.org/10.1016/j.neuroimage.2009.02.010},
+  year = {2009},
+  month = {may},
+  publisher = {Elsevier {BV}},
+  volume = {46},
+  number = {1},
+  pages = {177--192},
+  author = {Jorge Jovicich and Silvester Czanner and Xiao Han and David Salat and Andre van der Kouwe and Brian Quinn and Jenni Pacheco and Marilyn Albert and Ronald Killiany and Deborah Blacker},
+  title = {{{MRI}-derived measurements of human subcortical ventricular and intracranial brain volumes: Reliability effects of scan sessions, acquisition sequences, data analyses, scanner upgrade, scanner vendors and field strengths}},
+  journal = {{NeuroImage}},
+}
