--- a/begin_table_centering_begin_tabular__.tex
+++ b/begin_table_centering_begin_tabular__.tex
@@ -16,7 +16,7 @@ Distortion Correction &                  N &                  N &               
 Parallel Imaging      &                  - &                  2 &                    2 &                    - \\
 FOV                   &        240x240x200 &        256x256x160 &          256x256x176 &          234x250x160 \\
 Read Out Direction    &                 HF &                 AP &                   HF &                   HF \\
-Head coil \# channels  &                  1 &                  8 &                   20 &                   12 \\
+Head coil \# channels  &                  2* &                  8 &                   20 &                   12 \\
 Model                 &           Signa LX &            Achieva &               Avanto &               Avanto \\
 OS                    &                11x &               2.50 &                VD13B &                 B17A \\
 Acq. Time (min)       &           06:24 &           05:34 &             04:58 &             08:56 \\
@@ -36,7 +36,7 @@ eTIV                  &               1 &               1 &                 1 & 
 scGMV                 &               .98 &               .97 &                 .98 &                 .93 \\
 \bottomrule
 \end{tabular}
-\caption{Top: Acquisition parameters for the four 1.5T scanners. Si = Siemens, Ph = Philips, GE= General Electric. Bottom: Test-retest reliabilities for selected ROIs, processed by Freesurfer. The ROIs are gray matter volume (GMV), subcortical gray matter volume (scGMV), cortex volume (cVol), cortical white matter volume (cWMV), and the volumes of the lateral ventricle (LV), amygdala (Amyg), thalamus (Thal), hippocampus (Hipp), caudate (Caud), and finally the estimated total intracranial volume (eTIV). Test-retest reliability is computed as within-site ICC(1,1)} 
+\caption{Top: Acquisition parameters for the four 1.5T scanners. Si = Siemens, Ph = Philips, GE= General Electric. Bottom: Test-retest reliabilities for selected ROIs, processed by Freesurfer. The ROIs are gray matter volume (GMV), subcortical gray matter volume (scGMV), cortex volume (cVol), cortical white matter volume (cWMV), and the volumes of the lateral ventricle (LV), amygdala (Amyg), thalamus (Thal), hippocampus (Hipp), caudate (Caud), and finally the estimated total intracranial volume (eTIV). Test-retest reliability is computed as within-site ICC(1,1) *quadrature coil} 
 \label{tab:acquisition1}
 
 \end{table}
