--- a/begin_table_small_centering_begin__1.tex
+++ b/begin_table_small_centering_begin__1.tex
@@ -1,6 +1,6 @@
 \begin{table}
-\small
 \centering
+\resizebox{\linewidth}{!}{%
 \begin{tabular}{lllllll}
 \toprule
 {} & 10 & 11 & 12 & 13 & 14 & 15 \\
@@ -35,7 +35,7 @@ cWMV                  &                 1   &                 1   &             
 eTIV                  &                 1   &                 1   &               1   &                1   &                1   &                .97 \\
 scGMV                 &                 .98 &                 .99 &               .98 &                .98 &                .99 &                .99 \\
 \bottomrule
-\end{tabular}
+\end{tabular}}
 \caption{Top: Acquisition parameters for the 3T Siemens (Si) Skyra and Prisma scanners.  Bottom: Test-retest reliabilities for selected ROIs, processed by Freesurfer. The ROIs are gray matter volume (GMV), subcortical gray matter volume (scGMV), cortex volume (cVol), cortical white matter volume (cWMV), and the volumes of the lateral ventricle (LV), amygdala (Amyg), thalamus (Thal), hippocampus (Hipp), caudate (Caud), and finally the estimated total intracranial volume (eTIV). Test-retest reliability is computed as within-site ICC(1,1)} 
 \label{tab:acquisition3}
 
