--- a/begin_table_small_centering_begin__.tex
+++ b/begin_table_small_centering_begin__.tex
@@ -1,6 +1,6 @@
 \begin{table}
-\small
 \centering
+\resizebox{\linewidth}{!}{%
 \begin{tabular}{llllll}
 \toprule
 {} & 5 &          6 & 7 & 8 & 9 \\
@@ -35,7 +35,7 @@ cWMV                  &                   1 &                        .99 &      
 eTIV                  &                   1 &                        1 &                  1 &               .92 &                 0.99 \\
 scGMV                 &                   .98 &                        .99 &                  .96 &               .98 &                 0.99 \\
 \bottomrule
-\end{tabular}
+\end{tabular}}
 
 \caption{Top: Acquisition parameters for the 3T Philips and GE scanners. Ph = Philips, GE= General Electric. Bottom: Test-retest reliabilities for selected ROIs, processed by Freesurfer. The ROIs are gray matter volume (GMV), subcortical gray matter volume (scGMV), cortex volume (cVol), cortical white matter volume (cWMV), and the volumes of the lateral ventricle (LV), amygdala (Amyg), thalamus (Thal), hippocampus (Hipp), caudate (Caud), and finally the estimated total intracranial volume (eTIV). Test-retest reliability is computed as within-site ICC(1,1)} 
 \label{tab:acquisition1}
