--- a/tab_acquisition2.tex
+++ b/tab_acquisition2.tex
@@ -1,6 +1,7 @@
 \begin{table}
 []
 \centering
+\resizebox{\linewidth}{!}{%
 \begin{tabular}{llllll}
 \toprule
 {} & 16 & 17& 18 & 19 & 20 \\
@@ -35,7 +36,7 @@ cWMV                  &               1   &               .99 &               .9
 eTIV                  &               .97 &               1   &               1   &               1   &               1   \\
 scGMV                 &               .98 &               .98 &               .98 &               .98 &               .98 \\
 \bottomrule
-\end{tabular}
+\end{tabular}}
 \caption{Top: Acquisition parameters for 3T Siemens (Si) Trio scanners. Bottom: Test-retest reliabilities for selected ROIs, processed by Freesurfer. The ROIs are gray matter volume (GMV), subcortical gray matter volume (scGMV), cortex volume (cVol), cortical white matter volume (cWMV), and the volumes of the lateral ventricle (LV), amygdala (Amyg), thalamus (Thal), hippocampus (Hipp), caudate (Caud), and finally the estimated total intracranial volume (eTIV). Test-retest reliability is computed as within-site ICC(1,1)} 
 \label{tab:acquisition4}
 
